Name:               hind
Version:            0.3
Synopsis:           A SMT-based model checker, using k-induction.
Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Garrin Kimmell
Maintainer:          Garrin Kimmell <garrin.kimmell@gmail.com>
Copyright:           (c) 2010 The University of Iowa
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6


Library
  Build-Depends: base >= 4 && < 5, containers, pretty,
                 directory, random, process,
                 smt-lib

  Ghc-Options: -threaded -O2
  Exposed-modules: Hind.KInduction, Hind.Interaction

Executable hind
       buildable: True
       Build-depends: smt-lib, time
       Main-Is:        Main.hs
       Ghc-Options:  -threaded -O2

source-repository head
  type: git
  location: git://gitsldg.ittc.ku.edu/kansas-lava/kansas-lava-verification.git
