Name:               hind
Version:            0.3
Synopsis:           A SMT-based model checker, using k-induction.
Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Garrin Kimmell
Maintainer:          Garrin Kimmell <garrin.kimmell@gmail.com>
Copyright:           (c) 2010 The University of Iowa
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.8


Library
  Build-Depends: base >= 4 && < 5, containers, pretty,
                 directory, random, process,
                 smt-lib == 0.0.4, polyparse >= 1.5,
                 hslogger, monads-fd, stm, cmdargs, filepath,
                 attoparsec-enumerator == 0.2.0.4,
                 enumerator == 0.4.14, mtl == 2.0.1.0

  Ghc-Options: -threaded -O2
  Exposed-modules: Hind
  Other-modules: Hind.KInduction
                 Hind.Interaction
                 Hind.Options
                 Hind.Logging
                 Hind.Chan
                 Hind.Parser
                 Hind.PathCompression
                 Hind.InvGen
                 Hind.Constants
                 Hind.ConnectionPool

Executable hind
       buildable: True
       Build-depends: smt-lib, time, hind, base, hslogger, filepath, directory
       Main-Is:        HindMain.hs
       Hs-source-dirs: executables
       Ghc-Options:  -threaded -O2  -auto

Executable covgen
       Buildable: True
       Build-depends: smt-lib, time, hind, base, hslogger, filepath, directory
       Main-Is:        CovGen.hs
       Hs-source-dirs: executables
       Ghc-Options:  -threaded -O2  -auto


source-repository head
  type: git
  location: git://gitsldg.ittc.ku.edu/kansas-lava/kansas-lava-verification.git
