Name:               kansas-lava-verification
Version:            0.2.1.20100623
Synopsis:           A verification extension for Kansas Lava, for interacting
                    with automated proof tools.
                     &#169; 2009 The University of Kansas; BSD3 license.
Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Garrin Kimmell
Maintainer:          Garrin Kimmell <garrin.kimmell@gmail.com>
Copyright:           (c) 2010 The University of Iowa
-- Homepage:            http://ittc.ku.edu/~andygill/kansas-lava.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6

Flag all
  Description: Enable full development tree
  Default:     False

Library
  Build-Depends: base >= 4 && < 5, containers, data-reify == 0.5, pretty,
                 -- kansas-lava
                 sized-types, directory, random, yices==0.0.0.7

  Exposed-modules: Language.KansasLava.Verification.Yices
  Other-modules:

-- hack for now
--  Hs-Source-Dirs:
  Ghc-Options:  -Wall -O2
--  Ghc-Prof-options:  -auto-all

-- Executable kansas-lava-test1
--     if flag(all)
--       Build-Depends: base, QuickCheck >= 2.0
--       buildable: True
--       Other-modules:
--     else
--       Build-depends: base
--       buildable: False
--     Main-Is:        Main.hs
--     Hs-Source-Dirs: ., tests/test1
--     Ghc-Options: -Wall

