Name:               kansas-lava-verification
Version:            0.3
Synopsis:           A verification extension for Kansas Lava, for interacting
                    with automated proof tools.
                     &#169; 2009 The University of Kansas; BSD3 license.
Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Garrin Kimmell
Maintainer:          Garrin Kimmell <garrin.kimmell@gmail.com>
Copyright:           (c) 2010 The University of Iowa
-- Homepage:            http://ittc.ku.edu/~andygill/kansas-lava.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6

Flag all
  Description: Enable full development tree
  Default:     True

Library
  Build-Depends: base >= 4 && < 5, containers, data-reify == 0.5, pretty,
                 directory, random, data-default, process,
                 kansas-lava, sized-types,
                 smt-lib

  Ghc-Options: -threaded -O2
-- -Wall -Werror -O2
  Exposed-modules: Language.KansasLava.Verification

  Other-modules:  Language.KansasLava.Verification.SMTLIB
                  Language.KansasLava.Verification.Interaction
                  Language.KansasLava.Verification.KInduction


-- hack for now
--  Hs-Source-Dirs:
--   Ghc-Options:  -Wall -O2
--  Ghc-Prof-options:  -auto-all

Executable prover
       buildable: True
       Build-depends: kansas-lava, smt-lib
       Main-Is:        Main.hs
       Ghc-Options:  -threaded -O2

